--- a/app-admin/mon/ChangeLog
+++ b/app-admin/mon/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for app-admin/mon
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-admin/mon/ChangeLog,v 1.2 2002/07/08 14:22:47 sunflare Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/mon/ChangeLog,v 1.3 2002/07/08 14:36:07 sunflare Exp $
 
 *mon-0.99.2 (08 Jul 2002)
 
@@ -8,7 +8,8 @@
 
   Did a version bump, and added in the .8 man pages as suggested by Terje
   Kvernes in bug #4635.  lintool'd and repoman'd the ebuild as well.  Added
-  SLOTs and KEYWORDs to the older ebuilds as well, per current policy.
+  SLOTs and KEYWORDs to the older ebuilds as well, per current policy. The
+  Author was Achim Gottinger <achim@gentoo.org>
 
 *mon-0.38.20-r6 (1 Feb 2002)
 
