--- a/app-cdr/gcombust/ChangeLog
+++ b/app-cdr/gcombust/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-cdr/gcombust
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/gcombust/ChangeLog,v 1.5 2002/05/26 22:20:04 agenkin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/gcombust/ChangeLog,v 1.6 2002/07/08 15:32:28 stroke Exp $
+
+*gcombust-0.1.52 (08 Jul 2002)
+
+  08 Jul 2002; Gabriele Giorgetti <stroke@gentoo.org> gcombust-0.1.52.ebuild :
+
+  new version
+  removed stale ebuilds.
 
 *gcombust-0.1.51 (26 May 2002)
 
