--- a/net-mail/postfix/ChangeLog
+++ b/net-mail/postfix/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-mail/postfix
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/postfix/ChangeLog,v 1.17 2002/05/21 06:42:59 drobbins Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/postfix/ChangeLog,v 1.18 2002/07/08 18:41:55 blizzy Exp $
+
+*postfix-1.1.11 (08 Jul 2002)
+
+  08 Jul 2002; Maik Schreiber <blizzy@gentoo.org> :
+
+  New version + TLS patch, closes bug #4215.
 
   20 May 2002; Daniel Robbins <drobbins@gentoo.org> postfix-1.1.8.ebuild:
   made "sasl" a USE var (disabled by default) since this seems most appropriate
