--- a/sys-apps/fcron/ChangeLog
+++ b/sys-apps/fcron/ChangeLog
@@ -1,13 +1,14 @@
 # ChangeLog for sys-apps/fcron
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/fcron/ChangeLog,v 1.4 2002/06/28 03:01:28 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/fcron/ChangeLog,v 1.5 2002/07/08 20:44:11 blizzy Exp $
 
   31 May 2002; Thilo Bangert <bangert@gentoo.org> fcron-2.0.0-r1.ebuild :
   fix for --path-to-editor - reported by avi schwartz
   added SLOT="0"
 
   31 May 2002; Thilo Bangert <bangert@gentoo.org> fcron-2.0.0-r1.ebuild :
-  fix for autoconf troubles - contributed by bZ at iq dash computing dot de    
+  fix for autoconf troubles - contributed by Maik Schreiber
+  <bZ@iq-computing.de>
 
   4 May 2002; Thilo Bangert <bangert@gentoo.org> fcron-2.0.0-r1.ebuild :
   added LICENSE - lintoolize
