--- a/dev-java/mysql-jdbc/ChangeLog
+++ b/dev-java/mysql-jdbc/ChangeLog
@@ -1,10 +1,10 @@
 # ChangeLog for dev-java/mysql-jdbc
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-java/mysql-jdbc/ChangeLog,v 1.2 2002/07/08 17:48:11 blizzy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/mysql-jdbc/ChangeLog,v 1.3 2002/07/08 20:47:48 blizzy Exp $
 
 *mysql-jdbc-2.0.14 (08 Jul 2002)
 
-  08 Jul 2002; Maik Schreiber <bZ@iq-computing.de> :
+  08 Jul 2002; Maik Schreiber <blizzy@gentoo.org> :
 
   New version, closes bug #3760.
 
