--- a/dev-java/jswat/ChangeLog
+++ b/dev-java/jswat/ChangeLog
@@ -1,13 +1,10 @@
 # ChangeLog for dev-java/jswat
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jswat/ChangeLog,v 1.1 2002/06/18 23:54:46 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jswat/ChangeLog,v 1.2 2002/07/08 20:52:40 blizzy Exp $
 
 *jswat-2.6 (18 Jun 2002)
 
   18 Jun 2002; Ryan Phillips <rphillips@gentoo.org> ChangeLog :
-  
-  Added initial ChangeLog which should be updated whenever the package is
-  updated in any way. This changelog is targetted to users. This means that the
-  comments should well explained and written in clean English. The details about
-  writing correct changelogs are explained in the skel.ChangeLog file which you
-  can find in the root directory of the portage repository.
+
+  Initial import, closes bug #3846.
+  ebuild submitted by Maik Schreiber <bZ@iq-computing.de>
