--- a/app-editors/pico/ChangeLog
+++ b/app-editors/pico/ChangeLog
@@ -1,13 +1,10 @@
 # ChangeLog for app-editors/pico
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-editors/pico/ChangeLog,v 1.1 2002/06/10 01:24:55 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/pico/ChangeLog,v 1.2 2002/07/08 20:56:35 blizzy Exp $
 
 *pico-0.0.1 (09 June 2002)
 
   09 June 2002; Ryan Phillips <rphillips@gentoo.org> ChangeLog :
-  
-  Added initial ChangeLog which should be updated whenever the package is
-  updated in any way. This changelog is targetted to users. This means that the
-  comments should well explained and written in clean English. The details about
-  writing correct changelogs are explained in the skel.ChangeLog file which you
-  can find in the root directory of the portage repository.
+
+  Initial import, closes bug #3464.
+  ebuild submitted by Maik Schreiber <bZ@iq-computing.de>
