--- a/gnome-extra/mc/ChangeLog
+++ b/gnome-extra/mc/ChangeLog
@@ -1,13 +1,14 @@
 # ChangeLog for gnome-extra/mc
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/mc/ChangeLog,v 1.6 2002/06/20 20:26:24 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/mc/ChangeLog,v 1.7 2002/07/08 21:03:44 blizzy Exp $
 
 *mc-4.5.55-r5 (20 Jun 2002)
 
   20 Jun 2002; Seemant Kulleen <seemant@gentoo.org> mc-4.5.55-r5.ebuild
   files/digest-mc-4.5.55-r5 :
 
-  Samba fixes from Maik Schreiber bZ@iq-computing.de in bug #3113
+  Samba fixes from Maik Schreiber <bZ@iq-computing.de>,
+  closes bug #3113.
 
 *mc-4.5.55-r4 (11 Apr 2002)
   11 Apr 2002; Spider <spider@gentoo.org>
