--- a/x11-libs/xosd/ChangeLog
+++ b/x11-libs/xosd/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for x11-libs/xosd
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/xosd/Changelog,v 1.3 2002/06/24 08:07:26 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/xosd/ChangeLog,v 1.1 2002/07/08 21:08:58 aliz Exp $
 
   08 Jun 2002; J.Alberto Suárez L. <bass@gentoo.org> xosd-0.70.ebuild:
 
