--- a/dev-db/postgresql/ChangeLog
+++ b/dev-db/postgresql/ChangeLog
@@ -1,8 +1,12 @@
 # ChangeLog for dev-db/postgresql
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql/ChangeLog,v 1.13 2002/07/02 17:03:55 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql/ChangeLog,v 1.14 2002/07/08 22:39:24 rphillips Exp $
 
 *postgresql-7.2-r3 (02 Jul 2002)
+  
+  08 Jul 2002; Ryan Phillips <rphillips@gentoo.org> postgresql-7.2-r3.ebuild :
+
+  Added creation of user and group
 
   02 Jul 2002; Ryan Phillips <rphillips@gentoo.org> files/7.2/postgresql,
   postgresql-7.2-r3.ebuild
@@ -12,6 +16,10 @@
   is not in the use vars.
 
 *postgresql-7.2.1-r1 (20 Jun 2002)
+
+  08 Jul 2002; Ryan Phillips <rphillips@gentoo.org> postgresql-7.2.1-r1.ebuild :
+
+  Added creation of user and group
 
   20 Jun 2002; Preston A. Elder <prez@gentoo.org> files/7.2.1/postgresql :
 
