--- a/net-misc/neon/ChangeLog
+++ b/net-misc/neon/ChangeLog
@@ -1,14 +1,24 @@
 # ChangeLog for net-misc/neon
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/neon/ChangeLog,v 1.4 2002/06/06 20:55:18 stroke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/neon/ChangeLog,v 1.5 2002/07/09 09:19:46 phoenix Exp $
 
 *neon-0.21.1 (06 Jun 2002)
 
-  06 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> neon-0.21.1.ebuild:
-  
-  new version
+  09 Jul 2002; phoen][x <phoenix@gentoo.org> neon-0.19.2.ebuild :
+  Added KEYWORDS.
+
+  06 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> neon-0.21.1.ebuild :
+  Bumped to new version
+
+*neon-0.19.2-r1 (?? ???? ????)
+
+  09 Jul 2002; phoen][x <phoenix@gentoo.org> neon-0.19.2.ebuild :
+  Added KEYWORDS, LICENSE, SLOT.
 
 *neon-0.19.2 (26 Feb 2002)
+
+  09 Jul 2002; phoen][x <phoenix@gentoo.org> neon-0.19.2.ebuild :
+  Added KEYWORDS, LICENSE, SLOT.
 
   26 Feb 2002; G.Bevin <gbevin@gentoo.org> neon-0.19.2.ebuild,
   files/digest-neon-0.19.2 :
@@ -17,6 +27,9 @@
   
 *neon-0.18.5 (8 Feb 2002)
 
+  09 Jul 2002; phoen][x <phoenix@gentoo.org> neon-0.18.5.ebuild :
+  Added KEYWORDS, LICENSE, SLOT.
+
   8 Feb 2002; G.Bevin <gbevin@gentoo.org> neon-0.18.5.ebuild,
   files/digest-neon-0.18.5 :
 
@@ -24,8 +37,10 @@
   
 *neon-0.15.3-r1 (1 Feb 2002)
 
-  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
-  
+  09 Jul 2002; phoen][x <phoenix@gentoo.org> neon-0.15.3-r1.ebuild:
+  Added KEYWORDS, LICENSE, SLOT.
+
+  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :  
   Added initial ChangeLog which should be updated whenever the package is
   updated in any way. This changelog is targetted to users. This means that the
   comments should well explained and written in clean English. The details about
