--- a/net-misc/nt/ChangeLog
+++ b/net-misc/nt/ChangeLog
@@ -1,25 +1,34 @@
 # ChangeLog for net-misc/nt
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/nt/ChangeLog,v 1.5 2002/06/07 20:01:18 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/nt/ChangeLog,v 1.6 2002/07/09 10:05:47 phoenix Exp $
 
 *nt-2.01 (7 Jun 2002)
 
-  7 Jun 2002; Martin Schlemmer <azarah@gentoo.org> :
+  09 Jul 2002; phoen][x <phoenix@gentoo.org> nt-2.01.ebuild :
+  Added KEYWORDS, LICENSE.
 
+  7 Jun 2002; Martin Schlemmer <azarah@gentoo.org> :
   Bump to latest version.
 
 *nt-2.0 (30 Apr 2002)
 
-  3 Jun 2002: Preston A. Elder <prez@gentoo.org> files/nt-2.0-gcc31.patch :
+  09 Jul 2002; phoen][x <phoenix@gentoo.org> nt-2.0.ebuild :
+  Added KEYWORDS, LICENSE.
 
+  3 Jun 2002: Preston A. Elder <prez@gentoo.org> files/nt-2.0-gcc31.patch :
   Added patch to make compile with gcc 3.1
 
 *nt-2.0_rc2 (28 Apr 2002)
 
+  09 Jul 2002; phoen][x <phoenix@gentoo.org> nt-2.0_rc2.ebuild :
+  Added KEYWORDS, LICENSE.
+
 *nt-1.30 (1 Feb 2002)
 
-  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
-  
+  09 Jul 2002; phoen][x <phoenix@gentoo.org> nt-1.30.ebuild :
+  Added KEYWORDS, LICENSE, SLOT.
+
+  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :  
   Added initial ChangeLog which should be updated whenever the package is
   updated in any way. This changelog is targetted to users. This means that the
   comments should well explained and written in clean English. The details about
