--- a/net-misc/nut/ChangeLog
+++ b/net-misc/nut/ChangeLog
@@ -1,11 +1,16 @@
 # ChangeLog for net-misc/nut
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/nut/ChangeLog,v 1.2 2002/04/12 21:41:18 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/nut/ChangeLog,v 1.3 2002/07/09 10:10:21 phoenix Exp $
 
 *nut-0.44.1-r1 (12 Apr 2002)
+
+  09 Jul 2002; phoen][x <phoenix@gentoo.org> nut-0.44.1-r1.ebuild :
+  Added KEYWORDS, LICENSE, SLOT.
+
   12 Apr 2002; Spider <spider@gentoo.org> 
   libpng update
   remove RPEND tag, unnecessary. (or typo;)
+
 *nut-0.44.1 (1 Feb 2002)
 
   1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
