--- a/net-misc/rdiff-backup/ChangeLog
+++ b/net-misc/rdiff-backup/ChangeLog
@@ -1,8 +1,11 @@
 # ChangeLog for net-misc/rdiff-backup
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/rdiff-backup/ChangeLog,v 1.2 2002/06/20 09:42:22 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/rdiff-backup/ChangeLog,v 1.3 2002/07/09 10:45:47 phoenix Exp $
 
 *rdiff-backup-0.8.0 (20 Jun 2002)
+
+  09 Jul 2002; phoen][x <phoenix@gentoo.org> rdiff-backup-0.8.0.ebuild :
+  Added KEYWORDS, SLOT.
 
   20 Jun 2002; Thilo Bangert <bangert@gentoo.org> rdiff-backup-0.8.0.ebuild:
   version bump - added LICENSE
