--- a/app-arch/guitar/ChangeLog
+++ b/app-arch/guitar/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for app-arch/guitar
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/guitar/Changelog,v 1.3 2002/05/25 23:23:59 bass Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/guitar/ChangeLog,v 1.1 2002/07/09 12:13:31 aliz Exp $
 
 *guitar-0.1.4 (21 May 2002)
 
