--- a/app-misc/krename/ChangeLog
+++ b/app-misc/krename/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/krename
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/krename/ChangeLog,v 1.3 2002/06/05 19:57:26 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/krename/ChangeLog,v 1.4 2002/07/09 14:32:56 lostlogic Exp $
+
+*krename-2.3.0-r1 (09 Jul 2002)
+
+  09 Jul 2002; Brandon Low <lostlogic@gentoo.org> krename-2.3.0-r1.ebuild :
+
+  GCC-3.1 fixage.
 
 *krename-2.3.0 (5 Jun 2002)
 
