--- a/net-im/gabber/ChangeLog
+++ b/net-im/gabber/ChangeLog
@@ -1,8 +1,12 @@
 # ChangeLog for net-im/gabber
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-im/gabber/ChangeLog,v 1.4 2002/06/08 15:38:09 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gabber/ChangeLog,v 1.5 2002/07/09 17:09:15 stroke Exp $
 
-
+*gabber-0.8.6-r2 (07 Jul 2002)
+  07 Jul 2002; Gabriele Giorgetti <stroke@gentoo.org> gabber-0.8.6-r2.ebuild :
+  Updated dependecies, added xmms support in the ebuild (use xmms ...). 
+  Also fixes bug #4739
+  
 gabber-0.8.6-r1 (8 Jun 2002)
   8 Jun 2002; Spider <spider@gentoo.org> gabber-0.8.6-r1.ebuild
   added limits to some libraries in DEPEND
