--- a/app-admin/kebuildpart/ChangeLog
+++ b/app-admin/kebuildpart/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/kebuildpart
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-admin/kebuildpart/ChangeLog,v 1.2 2002/06/10 19:11:15 wmertens Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/kebuildpart/ChangeLog,v 1.3 2002/07/09 18:44:27 danarmak Exp $
+
+*kebuildpart-0.3-r1 (09 Jul 2002)
+
+  09 Jul 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :
+
+  new version that installs the missing kebuildview.h to fix #4724.
 
 * kebuildpart-0.3 (10 Jun 2002)
 
