--- a/gnome-base/libghttp/ChangeLog
+++ b/gnome-base/libghttp/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for gnome-base/libghttp
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libghttp/ChangeLog,v 1.2 2002/03/21 13:32:00 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libghttp/ChangeLog,v 1.3 2002/07/09 19:06:18 azarah Exp $
+
+  09 Jun 2002; Martin Schlemmer <azarah@gentoo.org> libghttp-1.0.9-r2 :
+
+  Libtoolized this one, as I had problems which libtoolize fixed with
+  new install.
 
 *libghttp-1.0.9-r2 (21 Mar 2002)
 
