--- a/app-admin/ktail/ChangeLog
+++ b/app-admin/ktail/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/ktail
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-admin/ktail/ChangeLog,v 1.1 2002/02/01 21:52:59 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/ktail/ChangeLog,v 1.2 2002/07/09 19:15:34 danarmak Exp $
+
+*ktail-0.6.1 (09 Jul 2002)
+
+  09 Jul 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :
+
+  new (kde3) version, submitted by Yannick Koehler (bug 4713)
 
 *ktail-0.5.1-r1 (1 Feb 2002)
 
