--- a/media-libs/paragui/ChangeLog
+++ b/media-libs/paragui/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/paragui
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-libs/paragui/ChangeLog,v 1.3 2002/05/19 23:55:58 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/paragui/ChangeLog,v 1.4 2002/07/09 19:31:53 rphillips Exp $
+
+*paragui-1.0.2 (9 May 2002) 
+
+  9 Jul 2002; Ryan Phillips <rphillips@gentoo.org> paragui-1.0.2.ebuild :
+
+  New version
 
 *paragui-1.0.1-r1 (2 May 2002) 
 
