--- a/app-misc/kgraphspace/ChangeLog
+++ b/app-misc/kgraphspace/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/kgraphspace
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/kgraphspace/ChangeLog,v 1.1 2002/02/01 21:53:08 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/kgraphspace/ChangeLog,v 1.2 2002/07/09 19:35:30 danarmak Exp $
+
+*kgraphspace-0.3.0_pre1 (09 Jul 2002)
+
+  09 Jul 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :
+
+  New (kde3) version, should fix #4675
 
 *kgraphspace-0.2.14-r2 (1 Feb 2002)
 
