--- a/sys-cluster/cluster-glue/ChangeLog
+++ b/sys-cluster/cluster-glue/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-cluster/cluster-glue
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/cluster-glue/ChangeLog,v 1.26 2012/09/19 22:50:45 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/cluster-glue/ChangeLog,v 1.27 2012/10/29 12:21:30 ultrabug Exp $
+
+*cluster-glue-1.0.11 (29 Oct 2012)
+
+  29 Oct 2012; Ultrabug <ultrabug@gentoo.org> +cluster-glue-1.0.11.ebuild:
+  Version bump.
 
   19 Sep 2012; Jeroen Roovers <jer@gentoo.org> cluster-glue-1.0.10.ebuild:
   Stable for HPPA (bug #433359).
