--- a/net-firewall/conntrack-tools/ChangeLog
+++ b/net-firewall/conntrack-tools/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-firewall/conntrack-tools
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/conntrack-tools/ChangeLog,v 1.52 2012/10/29 09:45:11 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/conntrack-tools/ChangeLog,v 1.53 2012/10/29 12:36:43 jer Exp $
+
+  29 Oct 2012; Jeroen Roovers <jer@gentoo.org> conntrack-tools-1.4.0.ebuild:
+  Marked ~hppa (bug #440108).
 
 *conntrack-tools-1.4.0 (29 Oct 2012)
 
