--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,14 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7073 2012/10/29 12:03:53 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7074 2012/10/29 14:12:32 yngwin Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  29 Oct 2012; Ben de Groot <yngwin@gentoo.org>
+  arch/amd64/no-multilib/package.mask:
+  media-sound/aucdtect needs multilib on amd64 (x86-compat)
 
   29 Oct 2012; Ben de Groot <yngwin@gentoo.org> package.mask:
   Mask new quiterss version, needs update of unbundle-sqlite patch
