--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7075 2012/10/29 15:07:23 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7076 2012/10/29 15:11:32 mgorny Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  29 Oct 2012; Michał Górny <mgorny@gentoo.org> package.mask:
+  Mask the newer virtual for argparse as well.
 
   29 Oct 2012; Michał Górny <mgorny@gentoo.org> package.mask:
   Mask PYTHON_TARGETS-aware argparse until packages use the virtual.
