--- a/dev-python/ipython/ChangeLog
+++ b/dev-python/ipython/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/ipython
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/ipython/ChangeLog,v 1.101 2012/10/29 10:21:53 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/ipython/ChangeLog,v 1.102 2012/10/29 16:35:02 mgorny Exp $
+
+  29 Oct 2012; Michał Górny <mgorny@gentoo.org> ipython-0.12-r1.ebuild,
+  ipython-0.12.1.ebuild, ipython-0.13.1.ebuild, ipython-0.13.ebuild:
+  Use virtual for argparse.
 
   29 Oct 2012; Patrick Lauer <patrick@gentoo.org> ipython-0.13.1.ebuild:
   Reverting fix that doesn't fix
