--- a/app-crypt/gcr/ChangeLog
+++ b/app-crypt/gcr/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/gcr
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/gcr/ChangeLog,v 1.6 2012/10/29 20:39:12 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/gcr/ChangeLog,v 1.7 2012/10/29 20:54:27 blueness Exp $
+
+  29 Oct 2012; Anthony G. Basile <blueness@gentoo.org> gcr-3.4.1-r2.ebuild:
+  stable arm, bug #439152
 
   29 Oct 2012; Anthony G. Basile <blueness@gentoo.org> gcr-3.4.1-r2.ebuild:
   stable ppc ppc64, bug #439152
