--- a/app-emulation/qemu/ChangeLog
+++ b/app-emulation/qemu/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-emulation/qemu
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.136 2012/10/29 11:15:29 dev-zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.137 2012/10/29 23:50:54 cardoe Exp $
+
+  29 Oct 2012; Doug Goldstein <cardoe@gentoo.org> qemu-1.2.0.ebuild,
+  qemu-9999.ebuild:
+  Updates from the 1.1.x to ready for the 1.2.x series unmask.
 
   29 Oct 2012; Tiziano Müller <dev-zero@gentoo.org> qemu-9999.ebuild:
   Fix collision with vscclient in the live ebuild like in the 1.2.0 ebuild.
