--- a/app-emulation/libvirt/ChangeLog
+++ b/app-emulation/libvirt/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/libvirt
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.226 2012/10/30 04:43:42 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.227 2012/10/30 05:12:33 cardoe Exp $
+
+  30 Oct 2012; Doug Goldstein <cardoe@gentoo.org> libvirt-0.10.2-r3.ebuild,
+  libvirt-0.10.2.1.ebuild:
+  Explicitly disable firewalld support, which was getting enabled just from
+  having DBus support, which could come from Avahi support. bug #439764
 
 *libvirt-0.10.2.1 (30 Oct 2012)
 
