--- a/net-libs/libisds/ChangeLog
+++ b/net-libs/libisds/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/libisds
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libisds/ChangeLog,v 1.13 2012/10/29 13:35:36 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libisds/ChangeLog,v 1.14 2012/10/30 10:07:49 scarabeus Exp $
+
+*libisds-0.6.1 (30 Oct 2012)
+
+  30 Oct 2012; Tomáš Chvátal <scarabeus@gentoo.org> +libisds-0.6.1.ebuild,
+  -libisds-0.6-r1.ebuild, libisds-9999.ebuild:
+  Version bump to have working tests.
 
 *libisds-0.6-r1 (29 Oct 2012)
 
