--- a/mail-filter/opendkim/ChangeLog
+++ b/mail-filter/opendkim/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for mail-filter/opendkim
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/opendkim/ChangeLog,v 1.48 2012/10/27 07:25:23 eras Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/opendkim/ChangeLog,v 1.49 2012/10/30 12:00:42 ago Exp $
+
+  30 Oct 2012; <ago@gentoo.org> opendkim-2.6.7-r1.ebuild:
+  Stable for amd64, wrt bug #438968
 
 *opendkim-2.7.0 (27 Oct 2012)
 
